change title new one

--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>First Started</title>
+<title>Fine Started</title>
 <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
 <link  href='./ts.css' rel='stylesheet'>
 </head>
