--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@ Rotten Tomatoes</a></li>
 <li><a href="http://www.variety.com">
 Variety</a></li>
 </ul>
+There is no need to spend a lot of time on this
 </p>
 
 </body>
